pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-non-string-from.ub
factory: {
  state-moves: [
    { from: resource.old, to: 'resource.new' }
  ]
}
